--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZWFzeS1sYWJyYWRvci03NS5jbGVyay5hY2NvdW50cy5kZXYk
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
+CLERK_SECRET_KEY=sk_test_yXw0lKA4ftoZsvKZAm2eVAxzvCqmbkT7SymwyosW8z
 MONGODB_URI=''
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
