Remove .env from git tracking and update .gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZWFzeS1sYWJyYWRvci03NS5jbGVyay5hY2NvdW50cy5kZXYk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
 
 # Private Environment Variables
-CLERK_SECRET_KEY=sk_test_yXw0lKA4ftoZsvKZAm2eVAxzvCqmbkT7SymwyosW8z
+CLERK_SECRET_KEY=''
 MONGODB_URI=''
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
