--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
+    "inngest": "^3.32.4",
     "mongoose": "^8.12.1",
     "next": "15.1.6",
     "react": "^19.0.0",
